chore: shim for loading wasm miniscript async
Ticket: BTC-0000

--- a/modules/utxo-core/tsconfig.json
+++ b/modules/utxo-core/tsconfig.json
@@ -7,7 +7,7 @@
     "allowJs": false,
     "strict": true
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["src/**/*", "test/**/*", "../utxo-lib/src/miniscript"],
   "exclude": ["node_modules"],
   "references": [
     {
