--- a/modules/abstract-utxo/tsconfig.json
+++ b/modules/abstract-utxo/tsconfig.json
@@ -9,7 +9,7 @@
     "module": "node16",
     "typeRoots": ["../../types", "./node_modules/@types", "../../node_modules/@types"]
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["src/**/*", "test/**/*", "../utxo-lib/src/shim"],
   "exclude": ["node_modules"],
   "references": [
     {
