--- a/modules/bitgo/package.json
+++ b/modules/bitgo/package.json
@@ -127,6 +127,7 @@
     "@bitgo/statics": "^54.5.0",
     "@bitgo/unspents": "^0.48.3",
     "@bitgo/utxo-lib": "^11.6.1",
+    "@bitgo/wasm-miniscript": "2.0.0-beta.7",
     "@types/superagent": "^4.1.3",
     "bignumber.js": "^9.1.1",
     "fs-extra": "^9.1.0",
