--- a/modules/utxo-lib/package.json
+++ b/modules/utxo-lib/package.json
@@ -47,6 +47,7 @@
   ],
   "dependencies": {
     "@bitgo/blake2b": "^3.2.4",
+    "@bitgo/wasm-miniscript": "2.0.0-beta.7",
     "@brandonblack/musig": "^0.0.1-alpha.0",
     "@noble/curves": "1.8.1",
     "@noble/secp256k1": "1.6.3",
