feat(utxo-bin): allow imports from utxo-core and noble/curves
Update eslint configuration to allow importing from specific modules
that support deep imports via exports directive.

Issue: BTC-2170

Co-authored-by: llm-git <llm-git@ttll.de>

--- a/modules/utxo-bin/.eslintrc.json
+++ b/modules/utxo-bin/.eslintrc.json
@@ -2,6 +2,17 @@
   "extends": "../../.eslintrc.json",
   "rules": {
     "@typescript-eslint/explicit-module-boundary-types": "error",
+    "import/no-internal-modules": [
+      "error",
+      {
+        // these are false-positives
+        // certain packages explicitly ALLOW deep imports via the `exports` directive in package.json
+        "allow": [
+          "@bitgo/utxo-core/*",
+          "@noble/curves/*"
+        ]
+      }
+    ],
     "indent": "off"
   }
 }
