--- a/modules/utxo-bin/package.json
+++ b/modules/utxo-bin/package.json
@@ -29,6 +29,7 @@
     "@bitgo/blockapis": "^1.10.18",
     "@bitgo/statics": "^54.5.0",
     "@bitgo/unspents": "^0.48.3",
+    "@bitgo/utxo-core": "^1.11.0",
     "@bitgo/utxo-lib": "^11.6.1",
     "@bitgo/wasm-miniscript": "2.0.0-beta.7",
     "@noble/curves": "1.8.1",
