--- a/modules/babylonlabs-io-btc-staking-ts/package.json
+++ b/modules/babylonlabs-io-btc-staking-ts/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "@babylonlabs-io/btc-staking-ts",
-  "version": "0.0.0-semantic-release",
+  "name": "@bitgo/babylonlabs-io-btc-staking-ts",
+  "version": "2.3.4",
   "description": "Library exposing methods for the creation and consumption of Bitcoin transactions pertaining to Babylon's Bitcoin Staking protocol.",
   "module": "dist/index.js",
   "main": "dist/index.cjs",
   "typings": "dist/index.d.ts",
   "type": "module",
+  "exports": {
+    "import": "./dist/index.js",
+    "require": "./dist/index.cjs"
+  },
   "scripts": {
-    "generate-types": "dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts",
+    "generate-types": "dts-bundle-generator -o ./dist/index.d.cts ./src/index.ts --no-check",
     "build": "node build.js && npm run generate-types",
-    "format": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "format:fix": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "lint": "eslint ./src --fix",
     "prepare": "husky",
     "prepublishOnly": "npm run build",
-    "test": "jest --verbose",
-    "test:watch": "jest --watch",
     "version:canary": "npm version prerelease --preid=canary"
   },
   "files": [
@@ -28,56 +27,21 @@
     "btc-staking"
   ],
   "engines": {
-    "node": "24.2.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.ts": [
-      "prettier --write",
-      "eslint --fix"
-    ],
-    "tests/**/*.ts": [
-      "prettier --write",
-      "eslint --fix"
-    ]
+    "node": ">=18 < 23"
   },
   "author": "Babylon Labs Ltd.",
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^12.0.1",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
-    "@typescript-eslint/parser": "^7.4.0",
     "dts-bundle-generator": "^9.3.1",
-    "ecpair": "^2.1.0",
     "esbuild": "^0.20.2",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.2.5",
-    "prettier-plugin-organize-imports": "^3.2.4",
-    "semantic-release": "^24.2.3",
-    "ts-jest": "^29.1.4",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.4.0",
     "nanoevents": "^9.1.0"
   },
   "dependencies": {
-    "@babylonlabs-io/babylon-proto-ts": "1.0.1",
+    "@babylonlabs-io/babylon-proto-ts": "1.0.0",
     "@bitcoin-js/tiny-secp256k1-asmjs": "2.2.3",
     "@cosmjs/encoding": "^0.33.0",
-    "bitcoinjs-lib": "6.1.5"
+    "bip174": "=2.1.1",
+    "bitcoinjs-lib": "^6.1.7"
   },
   "publishConfig": {
     "access": "public"
