--- a/modules/utxo-core/package.json
+++ b/modules/utxo-core/package.json
@@ -55,11 +55,7 @@
     "@bitgo/utxo-lib": "^11.6.1",
     "@bitgo/wasm-miniscript": "2.0.0-beta.7",
     "bip174": "npm:@bitgo-forks/bip174@3.1.0-master.4",
-    "bitcoinjs-message": "npm:@bitgo-forks/bitcoinjs-message@1.0.0-master.3",
-    "lodash": "^4.17.15"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.151"
+    "bitcoinjs-message": "npm:@bitgo-forks/bitcoinjs-message@1.0.0-master.3"
   },
   "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c"
 }
