chore: do not remove lockfile in test_package_updates workflow
I was debugging sudden random errors in another PR caused by presumably new
packages being published on npm.

I found out that I could fix these compile errors by changing the
`resolutions` in toplevel `package.json`.

Hold on though - isn't the point of `test_package_updates.yml` to test
"downstream installs" by removing the lockfile? These downstream installs
don't care about the toplevel `resolutions` anyway, this is all just a
charade.

Let's keep the lockfile and do a regular `yarn install` (like in `ci.yml`).

Issue: BTC-2170

--- a/.github/workflows/test_package_updates.yml
+++ b/.github/workflows/test_package_updates.yml
@@ -41,14 +41,11 @@ jobs:
       - name: Fetch Base Ref
         run: git fetch origin $GITHUB_BASE_REF
 
-      - name: Remove yarn.lock to simulate downstream installs
-        run: rm yarn.lock
-
       - name: Install Packages
         env:
           # Workaround for https://github.com/nodejs/node/issues/51555
           DISABLE_V8_COMPILE_CACHE: '1'
-        run: yarn install
+        run: yarn install --with-frozen-lockfile --ignore-scripts
 
       - name: Unit test all
         run: yarn unit-test
