fix(ci): update yarn install command syntax
Use `--frozen-lockfile` instead of `--with-frozen-lockfile` to fix CI
installation commands.

Issue: BTC-2170

Co-authored-by: llm-git <llm-git@ttll.de>

--- a/.github/workflows/test_package_updates.yml
+++ b/.github/workflows/test_package_updates.yml
@@ -45,7 +45,7 @@ jobs:
         env:
           # Workaround for https://github.com/nodejs/node/issues/51555
           DISABLE_V8_COMPILE_CACHE: '1'
-        run: yarn install --with-frozen-lockfile --ignore-scripts
+        run: yarn install --frozen-lockfile
 
       - name: Unit test all
         run: yarn unit-test
