chore: vendor babylonlabs-io/btc-staking-ts#v1.0.3
This commit was generated by the vendor-github-repo script.

TICKET: BTC-2143

--- a/modules/babylonlabs-io-btc-staking-ts/tsconfig.json
+++ b/modules/babylonlabs-io-btc-staking-ts/tsconfig.json
@@ -7,13 +7,10 @@
     "strict": true,
     "skipLibCheck": true,
     "isolatedModules": true,
-    "declaration": true,
-    "composite": true,
-    "outDir": "./build",
+    "declaration": true
   },
   "exclude": [
     "node_modules",
-    "build",
     "dist",
     "**/*.test.ts"
   ]
