--- a/modules/account-lib/package.json
+++ b/modules/account-lib/package.json
@@ -27,6 +27,7 @@
     "node": ">=18 <23"
   },
   "dependencies": {
+    "@bitgo/sdk-coin-ada": "^4.11.5",
     "@bitgo/sdk-coin-algo": "^2.3.5",
     "@bitgo/sdk-coin-apechain": "^1.1.3",
     "@bitgo/sdk-coin-apt": "^2.4.5",
