--- a/modules/sdk-coin-vet/package.json
+++ b/modules/sdk-coin-vet/package.json
@@ -49,7 +49,8 @@
     "bignumber.js": "^9.1.1",
     "ethereumjs-util": "7.1.5",
     "lodash": "^4.17.21",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "ethereumjs-abi": "^0.6.5"
   },
   "devDependencies": {
     "@bitgo/sdk-api": "^1.64.1",
