--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: restore lerna dependencies
         id: lerna-cache
-        uses: actions/cache@v3
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 #v4.2.3
         with:
           path: |
             node_modules
@@ -97,7 +97,7 @@ jobs:
 
       - name: restore lerna dependencies
         id: lerna-cache
-        uses: actions/cache@v3
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 #v4.2.3
         with:
           path: |
             node_modules
@@ -198,7 +198,7 @@ jobs:
 
       - name: restore lerna dependencies
         id: lerna-cache
-        uses: actions/cache@v3
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 #v4.2.3
         with:
           path: |
             node_modules
