chore: upgrade upload-tools node version to v22
Ticket: DO-14233

--- a/modules/bitgo/scripts/upload-tools/Dockerfile
+++ b/modules/bitgo/scripts/upload-tools/Dockerfile
@@ -1,2 +1,4 @@
-FROM node:10
-RUN yarn global add codecov typedoc && yarn add aws-sdk
+FROM node:22@sha256:2fa6c977460b56d4d8278947ab56faeb312bc4cc6c4cf78920c6de27812f51c5
+
+RUN yarn global add codecov typedoc && \
+    yarn add aws-sdk
