--- a/modules/utxo-staking/package.json
+++ b/modules/utxo-staking/package.json
@@ -47,6 +47,7 @@
     "@bitgo/utxo-core": "^1.12.0",
     "@bitgo/utxo-lib": "^11.6.2",
     "@bitgo/wasm-miniscript": "2.0.0-beta.7",
+    "bip174": "npm:@bitgo-forks/bip174@3.1.0-master.4",
     "bip322-js": "^2.0.0",
     "bitcoinjs-lib": "^6.1.7",
     "fp-ts": "^2.16.2",
