--- a/tsconfig.packages.json
+++ b/tsconfig.packages.json
@@ -101,6 +101,9 @@
       "path": "./modules/sdk-coin-coreum"
     },
     {
+      "path": "./modules/sdk-coin-cosmos"
+    },
+    {
       "path": "./modules/sdk-coin-cronos"
     },
     {
