fix: run test in /dist to avoid strip-only mode for node 24
TICKET: WP-5182

--- a/modules/bitgo/package.json
+++ b/modules/bitgo/package.json
@@ -26,14 +26,14 @@
     "webpack-dev": "cross-env NODE_ENV=development webpack",
     "webpack-prod": "NODE_OPTIONS=--max-old-space-size=4096 cross-env NODE_ENV=production webpack",
     "test": "npm run coverage",
-    "unit-test": "mocha 'test/v2/unit/**/*.ts' 'test/unit/**/*.ts'",
+    "unit-test": "mocha 'dist/test/v2/unit/**/*.js' 'dist/test/unit/**/*.js'",
     "coverage": "nyc -- npm run unit-test",
     "integration-test": "nyc -- mocha \"test/v2/integration/**/*.ts\"",
     "browser-test": "karma start karma.conf.js",
     "lint": "eslint --quiet .",
     "audit": "if [ \"$(npm --version | cut -d. -f1)\" -ge \"6\" ]; then npm audit; else echo \"npm >= 6 required to perform audit. skipping...\"; fi",
     "clean": "rm -r dist/*",
-    "build": "yarn tsc --build --incremental --verbose .",
+    "build": "yarn tsc --build --incremental --verbose . && cpx \"test/v2/unit/internal/tssUtils/ecdsaMPCv2/fixtures/**/*\" dist/test/v2/unit/internal/tssUtils/ecdsaMPCv2/fixtures",
     "prepare": "npm run build",
     "prepublishOnly": "npm run compile",
     "upload-artifacts": "node scripts/upload-test-reports.js",
@@ -145,6 +145,7 @@
     "@types/jasmine": "^3.5.12",
     "@types/lodash": "^4.14.121",
     "aws-sdk": "^2.1155.0",
+    "cpx": "^1.5.0",
     "io-ts-types": "^0.5.16",
     "karma": "^5.1.1",
     "karma-chrome-launcher": "^3.1.0",
