--- a/modules/utxo-staking/package.json
+++ b/modules/utxo-staking/package.json
@@ -41,6 +41,7 @@
       ".ts"
     ]
   },
+  "type": "commonjs",
   "dependencies": {
     "@babylonlabs-io/babylon-proto-ts": "1.0.0",
     "@bitgo/babylonlabs-io-btc-staking-ts": "^2.4.0",
