--- a/modules/sdk-coin-sol/package.json
+++ b/modules/sdk-coin-sol/package.json
@@ -43,6 +43,7 @@
     "@bitgo/sdk-core": "^36.0.0",
     "@bitgo/sdk-lib-mpc": "^10.6.0",
     "@bitgo/statics": "^57.0.0",
+    "@solana/spl-stake-pool": "1.1.8",
     "@solana/spl-token": "0.3.1",
     "@solana/web3.js": "1.92.1",
     "bignumber.js": "^9.0.0",
