feat(sdk-coin-cosmos): add cosmos shared coin functionalities
TICKET: COIN-4881

--- a/modules/sdk-coin-cosmos/package.json
+++ b/modules/sdk-coin-cosmos/package.json
@@ -41,6 +41,11 @@
   },
   "dependencies": {
     "@bitgo/abstract-cosmos": "^11.9.8",
-    "@bitgo/sdk-core": "^35.8.0"
-  }
+    "@bitgo/sdk-core": "^35.8.0",
+    "@bitgo/statics": "^55.2.0",
+    "@cosmjs/amino": "^0.29.5",
+    "@cosmjs/stargate": "^0.29.5",
+    "bignumber.js": "^9.1.1"
+  },
+  "devDependencies": {}
 }
