fix(sdk-coin-soneium): update recoveryBlockchainExplorerQuery
Ticket: WIN-6372

--- a/modules/sdk-coin-soneium/package.json
+++ b/modules/sdk-coin-soneium/package.json
@@ -43,7 +43,9 @@
     "@bitgo/abstract-eth": "^24.8.1",
     "@bitgo/sdk-core": "^35.8.0",
     "@bitgo/statics": "^55.2.0",
-    "@ethereumjs/common": "^2.6.5"
+    "@ethereumjs/common": "^2.6.5",
+    "ethereumjs-util": "^7.1.5",
+    "superagent": "^10.2.3"
   },
   "devDependencies": {
     "@bitgo/sdk-api": "^1.65.1",
