--- a/modules/sdk-coin-cosmos/package.json
+++ b/modules/sdk-coin-cosmos/package.json
@@ -41,11 +41,15 @@
   },
   "dependencies": {
     "@bitgo/abstract-cosmos": "^11.10.0",
+    "@bitgo/sdk-api": "^1.65.2",
     "@bitgo/sdk-core": "^35.9.0",
     "@bitgo/statics": "^55.3.0",
     "@cosmjs/amino": "^0.29.5",
+    "@cosmjs/encoding": "^0.29.5",
     "@cosmjs/stargate": "^0.29.5",
     "bignumber.js": "^9.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@bitgo/sdk-test": "^8.0.98"
+  }
 }
