--- a/modules/bitgo/tsconfig.json
+++ b/modules/bitgo/tsconfig.json
@@ -123,6 +123,9 @@
       "path": "../sdk-coin-coreum"
     },
     {
+      "path": "../sdk-coin-cosmos"
+    },
+    {
       "path": "../sdk-coin-cronos"
     },
     {
