--- a/modules/account-lib/package.json
+++ b/modules/account-lib/package.json
@@ -41,6 +41,7 @@
     "@bitgo/sdk-coin-bld": "^3.1.9",
     "@bitgo/sdk-coin-bsc": "^22.3.9",
     "@bitgo/sdk-coin-celo": "^5.1.9",
+    "@bitgo/sdk-coin-cosmos": "^1.2.0",
     "@bitgo/sdk-coin-coredao": "^2.3.9",
     "@bitgo/sdk-coin-coreum": "^21.1.9",
     "@bitgo/sdk-coin-cronos": "^1.3.4",
