--- a/modules/account-lib/tsconfig.json
+++ b/modules/account-lib/tsconfig.json
@@ -44,6 +44,9 @@
       "path": "../sdk-coin-coreum"
     },
     {
+      "path": "../sdk-coin-cosmos"
+    },
+    {
       "path": "../sdk-coin-cspr"
     },
     {
