chore(express): api-ts setup
Ticket: WP-5395

--- a/modules/express/tsconfig.json
+++ b/modules/express/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": ".",
+    "allowSyntheticDefaultImports": true,
     "typeRoots": ["./types", "../../types", "./node_modules/@types", "../../node_modules/@types"]
   },
   "include": ["src/**/*", "test/**/*", "package.json"],
