--- a/modules/express/package.json
+++ b/modules/express/package.json
@@ -53,7 +53,9 @@
     "morgan": "^1.9.1",
     "proxy-agent": "6.4.0",
     "proxyquire": "^2.1.3",
-    "superagent": "^9.0.1"
+    "superagent": "^9.0.1",
+    "@api-ts/io-ts-http": "^3.2.1",
+    "@api-ts/typed-express-router": "^1.1.13"
   },
   "devDependencies": {
     "@bitgo/public-types": "5.1.0",
