--- a/modules/utxo-core/package.json
+++ b/modules/utxo-core/package.json
@@ -56,7 +56,8 @@
     "@bitgo/utxo-lib": "^11.6.3",
     "@bitgo/wasm-miniscript": "2.0.0-beta.7",
     "bip174": "npm:@bitgo-forks/bip174@3.1.0-master.4",
-    "bitcoinjs-message": "npm:@bitgo-forks/bitcoinjs-message@1.0.0-master.3"
+    "bitcoinjs-message": "npm:@bitgo-forks/bitcoinjs-message@1.0.0-master.3",
+    "fast-sha256": "^1.3.0"
   },
   "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c"
 }
