--- a/modules/sdk-coin-polyx/package.json
+++ b/modules/sdk-coin-polyx/package.json
@@ -43,9 +43,11 @@
     "@bitgo/abstract-substrate": "^1.8.9",
     "@bitgo/sdk-core": "^36.0.0",
     "@bitgo/statics": "^57.0.0",
+    "@bitgo/sdk-lib-mpc": "^10.6.0",
     "@polkadot/keyring": "13.3.1",
     "@substrate/txwrapper-core": "7.5.2",
     "@substrate/txwrapper-polkadot": "7.5.2",
+    "@polkadot/api": "14.1.1",
     "bignumber.js": "^9.1.2",
     "joi": "^17.4.0"
   },
