chore: add devex as codeowners for monorepo files
Ticket: DX-1700

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,7 +2,7 @@
 # Each line is a file pattern followed by one or more owners.
 
 # These owners and first officers will be the default owners for everything in the repo.
-*   @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
+*   @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience
 
 # Order is important. The last matching pattern has the most precedence.
 
@@ -128,21 +128,22 @@
 /modules/statics/ @BitGo/web-experience @BitGo/ethalt-team
 /modules/statics/src/utxo.ts @BitGo/btc-team
 /modules/web-demo/ @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
-/scripts/ @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
+/scripts/ @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience
 /types/ @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
 /webpack/ @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
 
-/.eslintrc.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
-/.prettierrc.yml @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
-/check-package-versions.js @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
+/.eslintrc.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience
+/.prettierrc.yml @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience
+/check-package-versions.js @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience
 /CODEOWNERS @BitGo/git-admins
-/DEVELOPERS.md @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
+/DEVELOPERS.md @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience
 /commitlint.config.js @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
 /Dockerfile @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
-/lerna.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
-/package.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
-/tsconfig.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
+/lerna.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience
+/package.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience
+/tsconfig.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience
 /tsconfig.packages.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
+/yarn.lock @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience
 /.iyarc @BitGo/wallet-platform @BitGo/hsm @BitGo/velocity
 flake.nix @BitGo/wallet-platform @BitGo/hsm @BitGo/developer-experience
 flake.lock @BitGo/wallet-platform @BitGo/hsm @BitGo/developer-experience
