--- a/package.json
+++ b/package.json
@@ -84,12 +84,12 @@
     "web3-utils": "4.2.1",
     "@polkadot/api": "14.1.1",
     "elliptic": "^6.6.1",
-    "axios": "^1.8.2",
+    "axios": "^1.11.0",
     "canvg": "4.0.3",
     "**/stellar-sdk/**/bignumber.js": "4.1.0",
     "**/stellar-base/**/bignumber.js": "4.1.0",
     "bignumber.js": "9.1.2",
-    "form-data": "4.0.4",
+    "form-data": "^4.0.4",
     "**/avalanche/**/ws": "8.18.3",
     "**/ethers/**/ws": "7.5.10",
     "**/swarm-js/**/ws": "5.2.4"
@@ -132,7 +132,7 @@
     "test:prepare-release": "mocha --require ts-node/register ./scripts/tests/prepareRelease/prepare-release-main.test.ts"
   },
   "dependencies": {
-    "axios": "^1.8.2",
+    "axios": "^1.11.0",
     "terser": "^5.14.2",
     "tmp": "^0.2.3"
   },
