--- a/modules/express/package.json
+++ b/modules/express/package.json
@@ -55,7 +55,7 @@
     "proxyquire": "^2.1.3",
     "superagent": "^9.0.1",
     "@api-ts/io-ts-http": "^3.2.1",
-    "@api-ts/typed-express-router": "^1.1.13"
+    "@api-ts/typed-express-router": "2.0.0"
   },
   "devDependencies": {
     "@bitgo/public-types": "5.1.0",
