fix: fix the enum issue
Ticket: WIN-6707

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "noImplicitThis": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
+    "isolatedModules": false,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
