feat(sdk-coin-sol): use sol intent staking type from public types
BREAKING CHANGE: txBuilder.stakingType now uses SolStakingTypeEnum
from public-types instead of StakingType from BitGoJS.

Ticket: SC-2789

--- a/modules/sdk-coin-sol/package.json
+++ b/modules/sdk-coin-sol/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "dependencies": {
+    "@bitgo/public-types": "5.18.0",
     "@bitgo/sdk-core": "^36.3.0",
     "@bitgo/sdk-lib-mpc": "^10.6.0",
     "@bitgo/statics": "^57.3.0",
