--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "stream-http": "^3.2.0",
     "terser-webpack-plugin": "^5.3.3",
     "ts-node": "10.8.0",
+    "tsx": "^4.20.4",
     "typescript": "5.7.2",
     "typescript-cached-transpile": "^0.0.6",
     "url": "^0.11.0",
