--- a/modules/utxo-staking/package.json
+++ b/modules/utxo-staking/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint --quiet .",
     "prepare": "npm run build",
     "coverage": "nyc -- npm run unit-test",
-    "unit-test": "mocha --recursive \"dist/test/**/*.js\""
+    "unit-test": "mocha --recursive \"test/**/*.ts\""
   },
   "author": "BitGo SDK Team <sdkteam@bitgo.com>",
   "license": "MIT",
