--- a/tsconfig.packages.json
+++ b/tsconfig.packages.json
@@ -155,6 +155,9 @@
       "path": "./modules/sdk-coin-injective"
     },
     {
+      "path": "./modules/sdk-coin-iota"
+    },
+    {
       "path": "./modules/sdk-coin-islm"
     },
     {
