feat(express): enable esModuleInterop to align test and runtime
Enable esModuleInterop: true in modules/express/tsconfig.json
to fix CommonJS default-import interop at runtime.

Context:
Unit tests run via Mocha with tsx, which implicitly provides CJS
default-import interop. This allowed `import express from 'express'`
to work in tests.The Docker image runs the compiled CJS output without
that interop, causing TypeError: (0 , express_1.    default) is not a function.
Enabling esModuleInterop makes the compiler emit CJS-compatible imports for CJS
modules like express, so  tests and the Docker runtime execute the same semantics.

Notes:
Keeps behavior consistent across tsx tests and compiled production artifacts.
No API changes; build-time only.

TICKET: WP-5759

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "inlineSources": true,
     "lib": ["dom", "es2020"],
     "module": "commonjs",
+    "esModuleInterop": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitThis": true,
     "resolveJsonModule": true,
