feat(sdk-coin-dot): integrate the Westend AssetHub chain for tdot
Ticket: WIN-7059

--- a/modules/sdk-coin-dot/tsconfig.json
+++ b/modules/sdk-coin-dot/tsconfig.json
@@ -8,7 +8,13 @@
     "typeRoots": ["../../types", "./node_modules/@types", "../../node_modules/@types"],
     "resolveJsonModule": true
   },
-  "include": ["src/**/*", "test/**/*", "test/resources/materialData.json", "test/resources/materialDataModified.json"],
+  "include": [
+    "src/**/*",
+    "test/**/*",
+    "test/resources/materialData.json",
+    "test/resources/materialDataModified.json",
+    "test/resources/assetHubMaterialData.json"
+  ],
   "exclude": ["node_modules"],
   "references": [
     {
