--- a/modules/sdk-coin-flrp/package.json
+++ b/modules/sdk-coin-flrp/package.json
@@ -43,7 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@types/bn.js": "^5.2.0",
     "@bitgo/sdk-test": "^9.0.9",
     "@bitgo/sdk-api": "^1.68.3"
   },
@@ -52,9 +51,7 @@
     "@bitgo/secp256k1": "^1.5.0",
     "@bitgo/statics": "^57.8.0",
     "@flarenetwork/flarejs": "4.1.0-rc0",
-    "@noble/curves": "1.8.1",
-    "create-hash": "^1.2.0",
-    "safe-buffer": "^5.2.1"
+    "bignumber.js": "9.0.0"
   },
   "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c"
 }
