--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -148,11 +148,11 @@
 /commitlint.config.js @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
 /Dockerfile @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
 /lerna.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience @BitGo/devops
-/package.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience @BitGo/devops
-**/package.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience @BitGo/devops
+/package.json @BitGo/sdk-reviewers
+**/package.json @BitGo/sdk-reviewers
 /tsconfig.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience @BitGo/devops
 /tsconfig.packages.json @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform
-/yarn.lock @BitGo/coins @BitGo/web-experience @BitGo/wallet-platform @BitGo/developer-experience @BitGo/devops
+/yarn.lock @BitGo/sdk-reviewers
 /.iyarc @BitGo/wallet-platform @BitGo/hsm @BitGo/velocity
 flake.nix @BitGo/wallet-platform @BitGo/hsm @BitGo/developer-experience
 flake.lock @BitGo/wallet-platform @BitGo/hsm @BitGo/developer-experience
