--- a/modules/sdk-coin-sol/package.json
+++ b/modules/sdk-coin-sol/package.json
@@ -44,6 +44,8 @@
     "@bitgo/sdk-core": "^36.9.0",
     "@bitgo/sdk-lib-mpc": "^10.7.0",
     "@bitgo/statics": "^58.0.0",
+    "@solana/buffer-layout": "4.0.1",
+    "@solana/buffer-layout-utils": "0.2.0",
     "@solana/spl-stake-pool": "1.1.8",
     "@solana/spl-token": "0.3.1",
     "@solana/web3.js": "1.92.1",
