--- a/package.json
+++ b/package.json
@@ -104,8 +104,7 @@
   ],
   "scripts": {
     "postinstall": "test -n \"$NOYARNPOSTINSTALL\" || lerna run build --stream",
-    "audit": "yarn audit --group dependencies optionalDependencies peerDependencies ; test $? -lt 8",
-    "audit-dev": "yarn audit --group devDependencies ; test $? -lt 8",
+    "audit-high": "improved-yarn-audit --min-severity high",
     "lint": "lerna run lint --stream",
     "lint-changed": "lerna run lint --since origin/${GITHUB_REPO_BRANCH:-master}..HEAD --stream",
     "unit-test-changed": "lerna run unit-test --since $(git merge-base HEAD~ origin/${GITHUB_REPO_BRANCH:-master}) --stream",
