fix: prepare-release should work with latest preid
This commit updates the prepare-release script to work with
the `@bitgo` stable relase org as well as the latest preid.

The script will use conventional commits for a specific module to
generate the next increment to use for the next version.

TICKET: WP-6047

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
           node-version-file: .nvmrc
 
       - name: Install BitGoJS
-        run: yarn install --with-frozen-lockfile
+        run: yarn install --with-frozen-lockfile --ignore-scripts
 
       - name: Set Environment Variable for Alpha
         if: github.ref != 'refs/heads/master' # only publish changes if on feature branches
