--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/parser": "^4.23.0",
     "babel-loader": "^9.1.0",
     "buffer": "^6.0.3",
+    "conventional-commits-parser": "6.2.0",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "depcheck": "^1.4.3",
@@ -45,6 +46,7 @@
     "should": "^13.1.3",
     "should-http": "^0.1.1",
     "should-sinon": "^0.0.6",
+    "simple-git": "^3.28.0",
     "sinon": "^6.3.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
