--- a/modules/express/package.json
+++ b/modules/express/package.json
@@ -30,8 +30,7 @@
     "upload-artifacts": "node scripts/upload-test-reports.js",
     "start": "node bin/bitgo-express",
     "update-bitgo": "bash ./scripts/update-bitgo.sh",
-    "build-docker": "podman build -f ../../Dockerfile --platform=linux/amd64 -t bitgo/express:latest -t bitgo/express:$(jq -r .version < package.json) ../..",
-    "push-docker": "podman push bitgo/express:latest bitgo/express:$(jq -r .version < package.json)",
+    "build-docker": "cd ../../ && yarn update-dockerfile && ./scripts/build-docker-express.sh",
     "check-fmt": "yarn prettier --check '{src,test}/**/*.{ts,js,json}'",
     "unprettied": "grep -R -L --include '*.ts' --include '*.js' --include '*.json' '@prettier' src test",
     "fmt": "yarn prettier --write '{src,test}/**/*.{ts,js,json}'"
