--- a/package.json
+++ b/package.json
@@ -130,8 +130,7 @@
     "dev": "tsc -b ./tsconfig.packages.json -w",
     "prepare": "husky install",
     "sdk-coin:new": "yo ./scripts/sdk-coin-generator",
-    "build-docker-express": "yarn update-dockerfile && podman build --platform=linux/amd64 -t bitgo/express:latest -t bitgo/express:$(jq -r .version < modules/express/package.json) .",
-    "push-docker-express": "podman push bitgo/express:latest && podman push bitgo/express:$(jq -r .version < modules/express/package.json)",
+    "build-docker-express": "yarn update-dockerfile && ./scripts/build-docker-express.sh",
     "update-dockerfile": "tsx scripts/update-dockerfile.ts",
     "precommit": "lint-staged",
     "lint-fix": "lerna run lint --parallel -- --fix",
