feat: skip cache during publish
TICKET: WP-6096

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,10 @@ permissions:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 
+env:
+  NX_NO_CLOUD: true
+  NX_SKIP_NX_CACHE: true
+
 jobs:
   publish:
     name: Publish Release
