--- a/modules/bitgo/package.json
+++ b/modules/bitgo/package.json
@@ -26,7 +26,7 @@
     "webpack-dev": "cross-env NODE_ENV=development webpack",
     "webpack-prod": "NODE_OPTIONS=--max-old-space-size=4096 cross-env NODE_ENV=production webpack",
     "test": "npm run coverage",
-    "unit-test": "mocha 'test/v2/unit/**/*.ts' 'test/unit/**/*.ts'",
+    "unit-test": "NODE_OPTIONS=--max-old-space-size=8192 mocha 'test/v2/unit/**/*.ts' 'test/unit/**/*.ts'",
     "coverage": "nyc -- npm run unit-test",
     "integration-test": "nyc -- mocha \"test/v2/integration/**/*.ts\"",
     "browser-test": "karma start karma.conf.js",
