fix(root): resolve nx cache configuration and github actions issues
ISSUE:
- GitHub Actions were failing due to NX cache configuration problems
- Copilot feedback identified redundant exclusions in nx.json production named input
- GitHub Actions cache keys had problematic negation pattern (!modules/*/package-lock.json)

SOLUTION:
- Fix NX cache configuration: remove redundant exclusions in nx.json production named input
- Fix GitHub Actions cache keys: remove problematic negation pattern from all cache keys
- Remove explicit NX dependency (Lerna 8 provides NX integration automatically)

TECHNICAL DETAILS:
- The production named input had redundant exclusions already covered by default input
- GitHub Actions hashFiles() function doesn't handle negation patterns reliably
- Lerna 8 includes NX integration, making explicit nx dependency unnecessary

VERIFICATION:
- NX cache functionality works correctly
- GitHub Actions cache keys function properly
- Cache restoration steps complete successfully in CI

TICKET: WP-6096

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
           path: |
             .nx/cache
             modules/*/dist
-          key: ${{ runner.os }}-nx-${{ matrix.node-version }}-${{ hashFiles('yarn.lock') }}-${{ hashFiles('modules/*/src/**/*.ts', 'modules/*/src/**/*.js', 'modules/*/*.json', '!modules/*/package-lock.json') }}
+          key: ${{ runner.os }}-nx-${{ matrix.node-version }}-${{ hashFiles('yarn.lock') }}-${{ hashFiles('modules/*/src/**/*.ts', 'modules/*/src/**/*.js', 'modules/*/*.json') }}
           restore-keys: |
             ${{ runner.os }}-nx-${{ matrix.node-version }}-${{ hashFiles('yarn.lock') }}-
             ${{ runner.os }}-nx-${{ matrix.node-version }}-
@@ -184,7 +184,7 @@ jobs:
           path: |
             .nx/cache
             modules/*/dist
-          key: ${{ runner.os }}-nx-license-${{ hashFiles('yarn.lock') }}-${{ hashFiles('modules/*/src/**/*.ts', 'modules/*/src/**/*.js', 'modules/*/*.json', '!modules/*/package-lock.json') }}
+          key: ${{ runner.os }}-nx-license-${{ hashFiles('yarn.lock') }}-${{ hashFiles('modules/*/src/**/*.ts', 'modules/*/src/**/*.js', 'modules/*/*.json') }}
           restore-keys: |
             ${{ runner.os }}-nx-license-${{ hashFiles('yarn.lock') }}-
             ${{ runner.os }}-nx-license-
@@ -291,7 +291,7 @@ jobs:
           path: |
             .nx/cache
             modules/*/dist
-          key: ${{ runner.os }}-nx-browser-${{ hashFiles('yarn.lock') }}-${{ hashFiles('modules/*/src/**/*.ts', 'modules/*/src/**/*.js', 'modules/*/*.json', '!modules/*/package-lock.json') }}
+          key: ${{ runner.os }}-nx-browser-${{ hashFiles('yarn.lock') }}-${{ hashFiles('modules/*/src/**/*.ts', 'modules/*/src/**/*.js', 'modules/*/*.json') }}
           restore-keys: |
             ${{ runner.os }}-nx-browser-${{ hashFiles('yarn.lock') }}-
             ${{ runner.os }}-nx-browser-
